# tstreamer

./: Cargo.toml  README.md
tstreamer/: Cargo.toml
tstreamer/src/: backends.rs  buffer.rs  element.rs  info.rs  lib.rs  new.rs  pad.rs  pipeline.rs
tstreamer/src/buffer/: cow.rs  html.rs  image.rs  markdown.rs  message.rs  misanthropic.rs  prompt.rs  tool.rs
tstreamer/src/buffer/message/: content.rs
tstreamer/src/element/: any.rs  inference.rs  prompt.rs
tstreamer/src/pipeline/: edge.rs  node.rs  state.rs
